@@ -24,6 +24,11 @@ Dave Sill on <em>alt.comp.mail.qmail</em>
 Adam McKenna on the <em>qmail mailing list</em>
 <br><br>
 
+"Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
+out there."<br>
+Matt Armstrong on the <em>ding mailing list</em>
+<br><br>
+
 "Tagged Message Delivery Agent is a great way of blocking spam.  Go check it out."<br>
 Guido van Driel on the <em>qmail mailing list</em>
 <br><br>
