@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Oct 31 17:29:34 2001 -->
+<!-- Fri Nov  2 23:12:16 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -147,6 +147,11 @@ Dave Sill on <em>alt.comp.mail.qmail</em>
 
 "Blocks spam better than any RBL ever did."<br>
 Adam McKenna on the <em>qmail mailing list</em>
+<br><br>
+
+"Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
+out there."<br>
+Matt Armstrong on the <em>ding mailing list</em>
 <br><br>
 
 "Tagged Message Delivery Agent is a great way of blocking spam.  Go check it out."<br>
